Pre-4.51.0 (no storage service)